tests/fixtures/error-syntax/diagnostics-errors.txt
test.tsx (10,21): Property 'fluentJunk' does not exist on type 'IntlObject<Messages, "template">'.

---

[parse-error: template/msgfmt-junk]: Expected "'", ",", "0", "}", [1-9], or any character but end of input found.
> 1 | {
    |  ^
[parse-error: template/msgfmt-invalid-format]: Expected "date", "number", "plural", "select", "selectordinal", or "time" but "b" found.
> 1 | {foo,bar,baz}
    |      ^
[parse-error: template]: E0003: Expected token: "}"
  1 | fluent-junk = {
  2 |
> 3 | fluent-junk2 = { NUMBER($param }
    | ^
  4 |
  5 | fluent-unsupported-attributes = with attributes
  6 |   .attr1 = some attribute
[parse-error: template]: E0003: Expected token: ")"
  1 | fluent-junk = {
  2 |
> 3 | fluent-junk2 = { NUMBER($param }
    |                                ^
  4 |
  5 | fluent-unsupported-attributes = with attributes
  6 |   .attr1 = some attribute
[unsupported-syntax: template/fluent-unsupported-attributes]: Fluent `Attribute` is not yet supported.
  4 |
  5 | fluent-unsupported-attributes = with attributes
> 6 |   .attr1 = some attribute
    |   ^^^^^^^^^^^^^^^^^^^^^^^
  7 |   .attr2 = another attribute
  8 |
  9 | -fluent-unsupported-term = a term
[unsupported-syntax: template/fluent-unsupported-attributes]: Fluent `Attribute` is not yet supported.
   5 | fluent-unsupported-attributes = with attributes
   6 |   .attr1 = some attribute
>  7 |   .attr2 = another attribute
     |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   8 |
   9 | -fluent-unsupported-term = a term
  10 |
[unsupported-syntax: template]: Fluent `Term` is not yet supported.
   7 |   .attr2 = another attribute
   8 |
>  9 | -fluent-unsupported-term = a term
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |
  11 | fluent-unsupported-references = {message-reference} {-term-reference}
  12 |
[unsupported-syntax: template/fluent-unsupported-references]: Fluent `MessageReference` is not yet supported.
   9 | -fluent-unsupported-term = a term
  10 |
> 11 | fluent-unsupported-references = {message-reference} {-term-reference}
     |                                  ^^^^^^^^^^^^^^^^^
  12 |
[unsupported-syntax: template/fluent-unsupported-references]: Fluent `TermReference` is not yet supported.
   9 | -fluent-unsupported-term = a term
  10 |
> 11 | fluent-unsupported-references = {message-reference} {-term-reference}
     |                                                      ^^^^^^^^^^^^^^^
  12 |